--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -17,7 +17,7 @@
 {{/*  {{ with (eq .Site.Params.Terminal.scheme "gruvbox_dark") }} {{- $terminal_style = resources.Get "sass/gruvbox_dark.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
 {{/*  {{ with (eq .Site.Params.Terminal.scheme "solarized_light") }} {{- $terminal_style = resources.Get "sass/solarized_light.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
 {{/*  {{ with (eq .Site.Params.Terminal.scheme "solarized_dark") }} {{- $terminal_style = resources.Get "sass/solarized_dark.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
-{{ with (eq .Site.Params.Terminal.scheme "shell-ubuntu") }} 
+{{ with (eq .Site.Params.Terminal.scheme "shell-ubuntu") }}
     {{- $terminal_style = resources.Get "sass/ubuntu.scss" | resources.ToCSS | minify -}}
     {{- $terminal_style = $terminal_style.Content -}}
 {{ end }}
@@ -28,7 +28,7 @@
 {{/*  {{ with (eq .Site.Params.Terminal.scheme "goph") }} {{- $terminal_style = resources.Get "sass/goph.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
 
 {{/*  Assume that ubuntu and retro do not exist in gogh.  */}}
-{{ $themeData := getJSON "https://raw.githubusercontent.com/Gogh-Co/Gogh/master/data/themes.json" }}
+{{ $themeData := resources.GetRemote "https://raw.githubusercontent.com/Gogh-Co/Gogh/master/data/themes.json" | transform.Unmarshal }}
 {{ range $t := $themeData }}
     {{if eq $t.name $.Site.Params.Terminal.scheme }}
         {{ $terminal_style = printf "body{background:%s}body #terminal{color:%s}body #user{color:%s}body #dir{color:%s}body .Typewriter__cursor{color:%s}a{color:%s}" $t.background $t.cursor $t.color_03 $t.color_05 $t.cursor $t.cursor | safeCSS }}
@@ -39,5 +39,3 @@
 {{ $terminal_style | safeCSS }}
 
 </style>
-
-
