--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,31 +1,31 @@
 <style>
 {{ if .IsHome }}
-{{- $default_style := resources.Get "sass/default.scss" | resources.ToCSS -}}
+{{- $default_style := resources.Get "sass/default.scss" | css.Sass -}}
 {{- $default_style.Content | safeCSS -}}
 {{ else }}
-{{- $activity_style := resources.Get "sass/activity.scss" | resources.ToCSS | minify -}}
+{{- $activity_style := resources.Get "sass/activity.scss" | css.Sass | minify -}}
 {{- $activity_style.Content | safeCSS -}}
 {{ end }}
 
 {{ $terminal_style := resources.Get "sass/white.scss" }}
-{{/*  {{ with (eq .Site.Params.Terminal.scheme "monokai") }} {{- $terminal_style = resources.Get "sass/monokai.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
+{{/*  {{ with (eq .Site.Params.Terminal.scheme "monokai") }} {{- $terminal_style = resources.Get "sass/monokai.scss" | css.Sass | minify -}} {{ end }}  */}}
 {{ with (eq .Site.Params.Terminal.scheme "shell-powershell") }}
-    {{- $terminal_style = resources.Get "sass/powershell.scss" | resources.ToCSS | minify -}}
+    {{- $terminal_style = resources.Get "sass/powershell.scss" | css.Sass | minify -}}
     {{- $terminal_style = $terminal_style.Content -}}
 {{ end }}
-{{/*  {{ with (eq .Site.Params.Terminal.scheme "gruvbox_light") }} {{- $terminal_style = resources.Get "sass/gruvbox_light.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
-{{/*  {{ with (eq .Site.Params.Terminal.scheme "gruvbox_dark") }} {{- $terminal_style = resources.Get "sass/gruvbox_dark.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
-{{/*  {{ with (eq .Site.Params.Terminal.scheme "solarized_light") }} {{- $terminal_style = resources.Get "sass/solarized_light.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
-{{/*  {{ with (eq .Site.Params.Terminal.scheme "solarized_dark") }} {{- $terminal_style = resources.Get "sass/solarized_dark.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
+{{/*  {{ with (eq .Site.Params.Terminal.scheme "gruvbox_light") }} {{- $terminal_style = resources.Get "sass/gruvbox_light.scss" | css.Sass | minify -}} {{ end }}  */}}
+{{/*  {{ with (eq .Site.Params.Terminal.scheme "gruvbox_dark") }} {{- $terminal_style = resources.Get "sass/gruvbox_dark.scss" | css.Sass | minify -}} {{ end }}  */}}
+{{/*  {{ with (eq .Site.Params.Terminal.scheme "solarized_light") }} {{- $terminal_style = resources.Get "sass/solarized_light.scss" | css.Sass | minify -}} {{ end }}  */}}
+{{/*  {{ with (eq .Site.Params.Terminal.scheme "solarized_dark") }} {{- $terminal_style = resources.Get "sass/solarized_dark.scss" | css.Sass | minify -}} {{ end }}  */}}
 {{ with (eq .Site.Params.Terminal.scheme "shell-ubuntu") }}
-    {{- $terminal_style = resources.Get "sass/ubuntu.scss" | resources.ToCSS | minify -}}
+    {{- $terminal_style = resources.Get "sass/ubuntu.scss" | css.Sass | minify -}}
     {{- $terminal_style = $terminal_style.Content -}}
 {{ end }}
 {{ with (eq .Site.Params.Terminal.scheme "shell-retro") }}
-    {{- $terminal_style = resources.Get "sass/retro.scss" | resources.ToCSS | minify -}}
+    {{- $terminal_style = resources.Get "sass/retro.scss" | css.Sass | minify -}}
     {{- $terminal_style = $terminal_style.Content -}}
 {{ end }}
-{{/*  {{ with (eq .Site.Params.Terminal.scheme "goph") }} {{- $terminal_style = resources.Get "sass/goph.scss" | resources.ToCSS | minify -}} {{ end }}  */}}
+{{/*  {{ with (eq .Site.Params.Terminal.scheme "goph") }} {{- $terminal_style = resources.Get "sass/goph.scss" | css.Sass | minify -}} {{ end }}  */}}
 
 {{/*  Assume that ubuntu and retro do not exist in gogh.  */}}
 {{ $themeData := resources.GetRemote "https://raw.githubusercontent.com/Gogh-Co/Gogh/master/data/themes.json" | transform.Unmarshal }}
